# python-music-tools

./: README.md  pyproject.toml
examples/: synth_test.py
python_music_tools/synthesis/: waves.py
python_music_tools/synthesis/oscilator/: oscilator.py  oscilator_base.py  oscilators.py  oscillator.py
