[tool.poetry]
name = "python-music-tools"
version = "0.1.0"
description = ""
authors = ["Syntrice <syntrice@protonmail.com>"]
readme = "README.md"
packages = [{include = "python_music_tools"}]

[tool.poetry.dependencies]
python = "^3.11"
pyaudio = "^0.2.13"
numpy = "^1.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
